// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero should match the dark variant snapshot with props 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="hero hero--dark"
        data-component="hero"
      >
        <div
          class="hero__container"
        >
          <p>
            Header content
          </p>
          <div
            class="hero__body"
          >
            <h1
              class="hero__title"
            >
              Welcoming title
            </h1>
            <p
              class="hero__intro"
            >
              Introduction text
            </p>
            <p
              class="hero__description"
            >
              Description text
            </p>
            <div
              class="hero__actions"
            >
              <a
                href="page-one"
              >
                Go to page one
              </a>
              <a
                href="page-two"
              >
                Go to page two
              </a>
            </div>
          </div>
        </div>
        <div
          class="hero__image-container"
          style="background-image: url(https://placekitten.com/200/140);"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="hero hero--dark"
      data-component="hero"
    >
      <div
        class="hero__container"
      >
        <p>
          Header content
        </p>
        <div
          class="hero__body"
        >
          <h1
            class="hero__title"
          >
            Welcoming title
          </h1>
          <p
            class="hero__intro"
          >
            Introduction text
          </p>
          <p
            class="hero__description"
          >
            Description text
          </p>
          <div
            class="hero__actions"
          >
            <a
              href="page-one"
            >
              Go to page one
            </a>
            <a
              href="page-two"
            >
              Go to page two
            </a>
          </div>
        </div>
      </div>
      <div
        class="hero__image-container"
        style="background-image: url(https://placekitten.com/200/140);"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Hero should match the snapshot with props 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="hero"
        data-component="hero"
      >
        <div
          class="hero__container"
        >
          <p>
            Header content
          </p>
          <div
            class="hero__body"
          >
            <h1
              class="hero__title"
            >
              Welcoming title
            </h1>
            <p
              class="hero__intro"
            >
              Introduction text
            </p>
            <p
              class="hero__description"
            >
              Description text
            </p>
            <div
              class="hero__actions"
            >
              <a
                href="page-one"
              >
                Go to page one
              </a>
              <a
                href="page-two"
              >
                Go to page two
              </a>
            </div>
          </div>
        </div>
        <div
          class="hero__image-container"
          style="background-image: url(https://placekitten.com/200/140);"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="hero"
      data-component="hero"
    >
      <div
        class="hero__container"
      >
        <p>
          Header content
        </p>
        <div
          class="hero__body"
        >
          <h1
            class="hero__title"
          >
            Welcoming title
          </h1>
          <p
            class="hero__intro"
          >
            Introduction text
          </p>
          <p
            class="hero__description"
          >
            Description text
          </p>
          <div
            class="hero__actions"
          >
            <a
              href="page-one"
            >
              Go to page one
            </a>
            <a
              href="page-two"
            >
              Go to page two
            </a>
          </div>
        </div>
      </div>
      <div
        class="hero__image-container"
        style="background-image: url(https://placekitten.com/200/140);"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
